--- a/css-basis.html
+++ b/css-basis.html
@@ -5,12 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dit is een pagina met Dummy content</title>
-  <style>
-    h2 {
-      color: red;
-    }
-
-  </style>
+  <link rel="stylesheet" href="stijl.css">
 </head>
 
 <body>
@@ -22,7 +17,7 @@
     <li><a href="#nowhere">Pellentesque</a></li>
   </ul>
 
-  <h1>Header level 1</h1>
+  <h1>HTML Ipsum Presents</h1>
 
   <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas.
     Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
