--- a/css-basis.html
+++ b/css-basis.html
@@ -1,55 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dit is een pagina met Dummy content</title>
+    <link rel="stylesheet" href="stijl.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dit is een pagina met Dummy content</title>
-  <link rel="stylesheet" href="stijl.css">
-</head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href=" #nowhere">Lorem</a></li>
+        <li><a id="active" href="#nowhere">Aliquam</a></li>
+        <li><a href="#nowhere">Morbi</a></li>
+        <li><a href="#nowhere">Praesent</a></li>
+        <li><a href="#nowhere">Pellentesque</a></li>
+      </ul>
+    </nav>
 
-<body>
-  <ul>
-    <li><a href=" #nowhere">Lorem</a></li>
-    <li><a href="#nowhere">Aliquam</a></li>
-    <li><a href="#nowhere">Morbi</a></li>
-    <li><a href="#nowhere">Praesent</a></li>
-    <li><a href="#nowhere">Pellentesque</a></li>
-  </ul>
+    <h1>HTML Ipsum Presents</h1>
 
-  <h1>HTML Ipsum Presents</h1>
+    <p>
+      <strong>Pellentesque habitant morbi tristique</strong> senectus et netus
+      et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat
+      vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
+      quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris
+      placerat eleifend leo.
+      <span class="voorbeeld-span"
+        >Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
+        wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet,
+        wisi.</span
+      >
+      Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci,
+      sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in
+      turpis pulvinar facilisis. Ut felis.
+    </p>
 
-  <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas.
-    Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-    egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et
-    sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet,
-    wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
-    dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+    <div class="voorbeeld2">
+      <h2>Header Level 2</h2>
 
-  <h2>Header Level 2</h2>
+      <p class="voorbeeld1">
+        Pellentesque habitant morbi tristique senectus et netus et malesuada
+        fames ac turpis egestas.
+      </p>
+      <ol>
+        <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+        <li>Aliquam tincidunt mauris eu risus.</li>
+      </ol>
 
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-  <ol>
-    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-    <li>Aliquam tincidunt mauris eu risus.</li>
-  </ol>
+      <blockquote>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+          magna. Cras in mi at felis aliquet congue. Ut a est eget ligula
+          molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis
+          mollis, tellus est malesuada tellus, at luctus turpis elit sit amet
+          quam. Vivamus pretium ornare est.
+        </p>
+      </blockquote>
+    </div>
 
-  <blockquote>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue.
-      Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus
-      est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p>
-  </blockquote>
+    <h2>Header Level 2</h2>
+    <p>
+      Pellentesque habitant morbi tristique senectus et netus et malesuada fames
+      ac turpis egestas.
+    </p>
+    <ul class="voorbeeld1">
+      <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+      <li>Aliquam tincidunt mauris eu risus.</li>
+    </ul>
 
-  <h2>Header Level 2</h2>
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-  <ul>
-    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-    <li>Aliquam tincidunt mauris eu risus.</li>
-  </ul>
-
-  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-    quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-    ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-</body>
-
+    <p>
+      Pellentesque habitant morbi tristique senectus et netus et malesuada fames
+      ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget,
+      tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
+      Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
+    </p>
+  </body>
 </html>
